# stock-screener

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: daily-scan.yml
.streamlit/: config.toml
design-system/tse-screener/: MASTER.md
src/stock_screener/: __init__.py  alert.py  auth.py  backtest.py  data_loader.py  db.py  earnings_calendar.py  fundamental_screener.py  jwt_auth.py  multi_timeframe.py  portfolio.py  price_target.py  profit_target.py  risk_management.py  screen_chain.py  technical_engine.py  user_store.py
src/stock_screener/assets/: style.css
tests/: conftest.py  test_alert.py  test_fundamental_screener.py  test_modules.py  test_multi_timeframe.py  test_persistence.py  test_price_target.py  test_profit_target.py  test_technical_engine.py
