[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tse-stock-screener"
version = "1.0.0"
description = "Algorithmic trading & analysis tool for Tokyo Stock Exchange"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.31",
    "pandas>=2.0.0",
    "pandas_ta>=0.3.14b",
    "plotly>=5.15.0",
    "streamlit>=1.28.0",
    "pyarrow>=12.0.0",
    "numpy>=1.24.0",
    "requests>=2.31",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[project.scripts]
tse-screener = "src.stock_screener.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
