[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tse-stock-screener"
version = "1.0.0"
description = "Algorithmic trading & analysis tool for Tokyo Stock Exchange"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.60",
    "pandas>=3.0.0",
    "pandas-ta-classic>=0.6.50",
    "plotly>=5.15.0",
    "streamlit>=1.52.0",
    "streamlit-js-eval>=0.1.7",
    "pyarrow>=22.0.0",
    "numpy>=2.2.0",
    "requests>=2.31",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
